Changelog for Hoogle (* = breaking change)

5.0.17.5, released 2019-01-27
*   #285, remove accidental API break in 5.0.17.4
    Lots of improvements in type search
5.0.17.4, released 2018-12-10
*   #285, change targetPackage/Module to be opaque
    Require haskell-src-exts-1.21
    #271, added FromJSON instance for Target
    #253, adds JSON pagination from query parameters
    Make sure <h1> works well in doc snippets
    #251, make sure transformers is more popular than mtl
    Require network-uri >= 2.6, don't require network
5.0.17.3, released 2018-04-17
    Require extra-1.6.6
    Fix the reported memory sizes
5.0.17.2, released 2018-03-16
    Remove support for GHC 7.10
    Require conduit-1.3.0
    #245, add support for GHC 8.4
5.0.17.1, released 2018-01-27
    #238, only identify the database by the first three version components
    #236, in --local mode replace file:// links in Haddock pages
5.0.17, released 2018-01-17
    Add lower bounds for time and bytestring
    #234, allow http-conduit-0.15
5.0.16, released 2018-01-03
    #232, allow haskell-src-exts-1.18-1.20
5.0.15, released 2017-12-12
    Allow haskell-src-exts-1.20
5.0.14, released 2017-11-28
    #228, add --datadir for overriding data directory on servers
    #223, don't break on foldl'
    #222, make sure all packages appear in the search
5.0.13, released 2017-07-30
    #219, treat the query "a->b" the same as "a -> b"
    #215, if a specified module/package is missing, give no results
    #220, start on port 8080 by default
    Rely on the fact ghc API is now on Hackage
    #217, fix the mode tag propagating to child links
5.0.12, released 2017-05-06
    #210, expose targetInfo and targetSearchDisplay
5.0.11, released 2017-05-02
    #209, add a defaultDatabaseLocation function
5.0.10, released 2017-04-17
    #205, change how the link URL is computed
    #206, put newer versions of a package first
5.0.9, released 2017-01-16
    #202, add --haddock functionality
5.0.8, released 2016-12-29