@@ -50,6 +50,7 @@ data CmdLine
         ,logs :: FilePath
         ,local :: Bool
         ,haddock :: Maybe FilePath
+        ,links :: Bool
         ,language :: Language
         ,scope :: String
         ,home :: String
@@ -134,6 +135,7 @@ server = Server
     ,local = False &= help "Allow following file:// links, restricts to 127.0.0.1  Set --host explicitely (including to '*' for any host) to override the localhost-only behaviour"
     ,haddock = def &= help "Serve local haddocks from a specified directory"
     ,scope = def &= help "Default scope to start with"
+    ,links = def &= help "Display extra links"
     ,home = "http://hoogle.haskell.org" &= typ "URL" &= help "Set the URL linked to by the Hoogle logo."
     ,host = "" &= help "Set the host to bind on (e.g., an ip address; '!4' for ipv4-only; '!6' for ipv6-only; default: '*' for any host)."
     ,https = def &= help "Start an https server (use --cert and --key to specify paths to the .pem files)"
